# MicroPython_ICM20948

./: .gitignore  .pylintrc  .readthedocs.yaml  README.rst  examples.json  package.json  packages.json  pyproject.toml  requirements.txt
docs/: api.rst  conf.py  examples.rst  index.rst  requirements.txt
examples/: icm20948_acc_dlpf_cutoff.py  icm20948_accelerometer_range.py  icm20948_clock_select.py  icm20948_gyro_dlpf_cutoff.py  icm20948_gyro_full_scale.py  icm20948_simpletest.py  icm20948_temperature.py
micropython_icm20948/: i2c_helpers.py  icm20948.py
